[tool.poetry]
name = "scri"
description = "Time-dependent functions of spin-weighted spherical harmonics"
version = "2021.9.3.14.57.00"
readme = "README.md"
license = "MIT"
authors = ["Michael Boyle <michael.oliver.boyle@gmail.com>"]
homepage = "https://github.com/moble/scri"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = ">=1.20"
scipy = "^1.0"
numba = ">=0.54"
h5py = ">=2.10.0"
numpy-quaternion = ">=2019"
spinsfast = "^104"
spherical-functions = ">=2020"
sxs = ">=2020"
importlib-metadata = {version = "^1.0", python = "<3.8"}
mkdocs = {version = "^1.1.2", optional = true}
mktheapidocs = {extras = ["plugin"], version = "^0.2.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.10.1"
mkdocs = "^1.1.2"
mktheapidocs = {extras = ["plugin"], version = "^0.2.0"}
black = "^21.8b0"

[tool.poetry.extras]
mkdocs = ["mkdocs"]
mktheapidocs = ["mktheapidocs"]

[tool.black]
line-length = 120
target-version = ['py36']

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ".* build dist *.egg-info install ENV"
junit_family="xunit2"
addopts = "-v --tb=short"

[build-system]
requires = [
    "setuptools>=40.6.0",
    "wheel",
    "numpy>=1.20",
    "numba>=0.54"
]
build-backend = "setuptools.build_meta"
