[tool.poetry]
name = "scri"
description = "Time-dependent functions of spin-weighted spherical harmonics"
version = "2022.0.2"
readme = "README.md"
license = "MIT"
authors = ["Michael Boyle <michael.oliver.boyle@gmail.com>"]
homepage = "https://github.com/moble/scri"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.20"
scipy = "^1.0"
numba = ">=0.55"
h5py = "^3"
numpy-quaternion = ">=2021"
spinsfast = "^104"
spherical-functions = ">=2020"
sxs = ">=2021"
tqdm = ">=4.48.2, <4.61.2"
importlib-metadata = {version = "^1.0", python = "<3.8"}
mkdocs = {version = "^1.1.2", optional = true}
mktheapidocs = {extras = ["plugin"], version = "^0.2.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = ">=2.10.1"
mkdocs = "^1.1.2"
mktheapidocs = {extras = ["plugin"], version = "^0.2.0"}
black = ">=22.1"

[tool.poetry.extras]
mkdocs = ["mkdocs"]
mktheapidocs = ["mktheapidocs"]

[tool.black]
line-length = 120
target-version = ['py38','py39','py310']

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ".* build dist *.egg-info install ENV gh-pages __pycache__"
junit_family="xunit2"
addopts = "-v --tb=short --doctest-glob=''"

[tool.yapf]
allow_split_before_default_or_named_assigns = false
column_limit = 120
dedent_closing_brackets = true
disable_ending_comma_heuristic = true
join_multiple_lines = false
split_before_arithmetic_operator = true
split_before_expression_after_opening_paren = true
split_before_first_argument = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
